<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="app_name">RGSC</string>
    <string name="title_activity_about_app">About RGSC</string>
    <string name="title_section1">In The Groove</string>
    <string name="title_section2">DDR Extreme</string>
    <string name="title_section3">DDR Supernova 2</string>
    <string name="action_settings">Settings</string>
    <string name="introduction_header">Score Calculator</string>
    <string name="introduction_body">This app calculates a player\'s score in several
        music rhythm games. Simply input your step counts and the relevant score
        information will be displayed.</string>
    <string name="button_select_game">Select Game</string>
    <string name="title_activity_itg_score_calculator">In the Groove</string>
    <string name="fantastics_hint">Fantastics</string>
    <string name="excellents_hint">Excellents</string>
    <string name="greats_hint">Greats</string>
    <string name="decents_hint">Decents</string>
    <string name="wayoffs_hint">Way Offs</string>
    <string name="misses_hint">Misses</string>
    <string name="holds_hint">Holds</string>
    <string name="totalHolds_hint">Total Holds</string>
    <string name="mines_hint">Mines</string>
    <string name="rolls_hint">Rolls</string>
    <string name="totalRolls_hint">Total Rolls</string>
    <string name="button_submit">Submit</string>
    <string name="itg_scoreSectionLabel">Calculated Score</string>
    <string name="itg_earnedScoreLabel_default">Earned Score:</string>
    <string name="itg_earnedScoreValue_default">0</string>
    <string name="itg_potentialScoreLabel_default">Potential Score:</string>
    <string name="itg_potentialScoreValue_default">0</string>
    <string name="itg_score_percent_default">0.00%</string>
    <string name="title_activity_ddr_ex_score_calculator">DDR Extreme</string>
    <string name="marvellouses_hint">Marvellouses</string>
    <string name="perfects_hint">Perfects</string>
    <string name="goods_hint">Goods</string>
    <string name="boos_hint">Boos</string>
    <string name="ddr_score_grade_default">(E)</string>
    <string name="title_activity_ddr_sn_score_calculator">DDR Supernova 2</string>
    <string name="title_activity_activity__ddr_sn1_score_calculator">Activity_DdrSn1ScoreCalculator</string>

</resources>
