<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity_Calculator_InTheGroove" >

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/score_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/fantastics"
                style="@style/ScoreEntryElement"
                android:hint="@string/fantastics_hint"
                 />

            <EditText
                android:id="@+id/holds"
                style="@style/ScoreEntryElement"
                android:hint="@string/holds_hint"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/excellents"
                style="@style/ScoreEntryElement"
                android:hint="@string/excellents_hint"
                 />

            <EditText
                android:id="@+id/totalHolds"
                style="@style/ScoreEntryElement"
                android:hint="@string/totalHolds_hint"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/greats"
                style="@style/ScoreEntryElement"
                android:hint="@string/greats_hint"
                 />

            <EditText
                android:id="@+id/mines"
                style="@style/ScoreEntryElement"
                android:hint="@string/mines_hint"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/decents"
                style="@style/ScoreEntryElement"
                android:hint="@string/decents_hint"
                 />

            <EditText
                android:id="@+id/rolls"
                style="@style/ScoreEntryElement"
                android:hint="@string/rolls_hint"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/wayoffs"
                style="@style/ScoreEntryElement"
                android:hint="@string/wayoffs_hint"
                 />

            <EditText
                android:id="@+id/totalRolls"
                style="@style/ScoreEntryElement"
                android:hint="@string/totalRolls_hint"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/misses"
                style="@style/ScoreEntryElement"
                android:hint="@string/misses_hint"
                
                android:nextFocusRight="@id/holds" />

            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="@dimen/itg_field_height"
                android:layout_weight="1"
                android:onClick="itgCalculateScore"
                android:text="@string/button_submit" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calculated_score"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/scoreSectionLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/itg_scoreSectionLabel"
                android:textSize="@dimen/itg_scoreSectionLabel_size"
                android:fontFamily="sans-serif-light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/earnedScoreLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/itg_earnedScoreLabel_default"
                android:textSize="@dimen/itg_earnedScoreLabel_size" />

            <TextView
                android:id="@+id/earnedScoreValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:text="@string/itg_earnedScoreValue_default"
                android:textSize="@dimen/itg_earnedScoreValue_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/potentialScoreLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/itg_potentialScoreLabel_default"
                android:textSize="@dimen/itg_potentialScoreLabel_size" />

            <TextView
                android:id="@+id/potentialScoreValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:text="@string/itg_potentialScoreValue_default"
                android:textSize="@dimen/itg_potentialScoreValue_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/scorePercent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/itg_score_percent_default"
                android:textSize="@dimen/itg_score_percent_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>